Fix modal size on mobile

--- a/src/components/FormDialog/styles.scss
+++ b/src/components/FormDialog/styles.scss
@@ -1,3 +1,9 @@
+.dialog__form {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
 /* (& > h2) don't do this at home */
 .MuiDialogTitle-root.dialog__title > h2 {
   font-size: 1.5rem;
